<resources>
    <string name="app_name">Odev2</string>
    <string name="create_new_account">YENİ HESAP OLUŞTUR</string>
    <string name="i_have_account">HESABIM VAR</string>
    <string name="app_name1">SoruAPP</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="create_new_account_lower">Yeni Hesap Oluştur</string>
    <string name="create_account">HESAP OLUŞTUR</string>
    <string name="surname">Kullanıcı Soyadı</string>
    <string name="again_password">Yeniden Parola</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="login_with_your_account">Hesabınızla Giriş Yapınız</string>
    <string name="login">GİRİŞ YAP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>